--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:preference-v7:26.0.1'
     testCompile 'junit:junit:4.12'
 }
