fix: Clean up before possible restructure
A change you want to make may need you to change the way you do a couple classes.
You want to have a clean jump off point to return to should that not lead anywhere.
Everything appears nominal at this point.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/action_settings"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+
+            >
 
             <!--  -->
             <meta-data
@@ -38,7 +40,8 @@
         <activity
             android:name=".DetailActivity"
             android:label="@string/action_details"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            >
 
             <!--  -->
             <meta-data
