--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         </activity>
 
         <activity android:name=".AboutActivity"
-            android:label="@string/action_about"></activity>
+            android:label="@string/action_about"/>
         <provider
             android:name=".data.MovieContentProvider"
             android:authorities="@string/package_name"
