--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,12 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.0.1'
     compile 'com.android.support:recyclerview-v7:26.0.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:preference-v7:26.0.1'
     compile 'com.android.support:palette-v7:26.0.1'
     compile 'com.android.support:design:26.0.1'
+    compile 'com.facebook.stetho:stetho:1.5.0'
+    compile 'com.facebook.stetho:stetho-urlconnection:1.5.0'
     testCompile 'junit:junit:4.12'
 }
