fix: More cleanup
Removing Youtube API Key from project.
Telling Tester where to put their Youtube and TMDb API Keys
Trying to make sure the Cursors are closed.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ project.properties
 ## The Movie DB API Key for Popular Movies Project for Udacity
 apiTmd.key
 
+## The Youtube Data API Key for accesss to Youtube
+youtubeDataAPI.key
+
 ##Gradle-based build
 .gradle
 build/
